Add code to display a single ical event

--- a/templates/tougcomsys/firsthome/homepage.html
+++ b/templates/tougcomsys/firsthome/homepage.html
@@ -86,6 +86,12 @@
                                                         <h3 >{{ event.headline|safe }}</h3>
                                                 </div>
                                             </a>
+                                        {% elif event.uid %}
+                                            <a href="{% url 'tougcomsys:ical_event' event.ical_url event.uid %}">
+                                                <div class="headline">    
+                                                        <h3 >{{ event.headline|safe }}</h3>
+                                                </div>
+                                            </a>     
                                         {% else %}
                                             <div class="headline">    
                                                 <h3 >{{ event.headline|safe }}</h3>
