--- a/templates/tougcomsys/firsthome/homepage.html
+++ b/templates/tougcomsys/firsthome/homepage.html
@@ -28,7 +28,7 @@
                                 </div>
 
                                 <div class="list_image">
-                                    <img src="{{ articleplacement.article.list_image.url }}">
+                                    <img src="{{ articleplacement.article.list_image.url }}"{% if articleplacement.article.list_image.alt_text %} alt="{{ articleplacement.article.list_image.alt_text }}"{% endif %}>
                                 </div>
 
                                 <div class="list_textfields">
