--- a/templates/tougcomsys/firsthome/homepage.html
+++ b/templates/tougcomsys/firsthome/homepage.html
@@ -34,6 +34,12 @@
                                 <div class="list_textfields">
                                     <div class="summary">
                                         {{ articleplacement.article.summary|safe }}
+                                        {% if articleplacement.article.show_readmore %}
+                                            <div class="readmore article_readmore">
+                                                <a href="{% url 'tougcomsys:article' articleplacement.article.slug %}">read more</a>
+                                            </div>        
+                                        {% endif %}
+
                                     </div>
                                 </div>
                             </div>
@@ -53,6 +59,12 @@
                                         </div>
                                         <div class="summary">
                                             {{ articleplacement.article.summary|safe }}
+                                            {% if articleplacement.article.show_readmore %}
+                                                <div class="readmore article_readmore">
+                                                    <a href="{% url 'tougcomsys:article' articleplacement.article.slug %}">read more</a>
+                                                </div>        
+                                            {% endif %}
+    
                                         </div>
                                     </div>
 
@@ -99,9 +111,21 @@
                                         {% endif %}
                                         <div class="subheadline">
                                             {{ event.summary|safe }}
+                                            {% if event.show_readmore %}
+                                                <div class="readmore article_readmore">
+                                                    <a href="{% url 'tougcomsys:article' event.slug %}">read more</a>
+                                                </div>        
+                                            {% endif %}
+    
                                         </div>
                                         <div class="summary">
                                             {{ articleplacement.article.summary|safe }}
+                                            {% if articleplacement.article.show_readmore %}
+                                                <div class="readmore article_readmore">
+                                                    <a href="{% url 'tougcomsys:article' articleplacement.article.slug %}">read more</a>
+                                                </div>        
+                                            {% endif %}
+    
                                         </div>
                                     </div>
 
