--- a/static/tougcomsys/tougcomsys.css
+++ b/static/tougcomsys/tougcomsys.css
@@ -114,7 +114,9 @@ div.column_wide {
 
 div.readmore {
     text-align: center;
+    font-size: .6em;
 }
+
 
 @media only screen and (max-width: 600px) {
 
