--- a/templates/tougcomsys/firsthome/_base.html
+++ b/templates/tougcomsys/firsthome/_base.html
@@ -9,6 +9,7 @@
             {% if object.featured_image %}
                 <meta property="og:image" content="{{ object.featured_image.url  }}" />
                 <meta property="og:image:alt" content="{{ object.featured_image.alt_text  }}" />
+                <meta property="og:description" content="{{ object.summary }}" />
             {% else %}
                 {% if 'keyed_head_lines' in tougcomsys %}
                     {% if 'og_image' in tougcomsys.keyed_head_lines %}
