--- a/static/tougcomsys/tougcomsys.css
+++ b/static/tougcomsys/tougcomsys.css
@@ -117,6 +117,18 @@ div.readmore {
     font-size: .6em;
 }
 
+div.comment {
+    margin-top:1em;
+}
+div.commenttext {
+    margin-left:1em;
+}
+
+div.commentinreplyto {
+    margin-top:1ex;
+    margin-left:3em;
+}
+
 
 @media only screen and (max-width: 600px) {
 
