--- a/templates/tougcomsys/firsthome/article.html
+++ b/templates/tougcomsys/firsthome/article.html
@@ -46,7 +46,11 @@
             {% endfor %}
             {% if article.allow_comments == 1 %}
                     <a href="{% url 'tougcomsys:comment_create' article.slug %}">Comment</a>
-                    <a href="{% url 'tougcomsys:subscription_create' article.slug %}">Subscribe</a>
+                    {% if subscription %}
+                        <a href="{% url 'tougcomsys:subscription_delete' subscription.id %}">Unsubscribe</a>
+                    {% else %}
+                        <a href="{% url 'tougcomsys:subscription_create' article.slug %}">Subscribe</a>
+                    {% endif %}
             {% endif %}
         {% endif %}
     </div>
