Add features to comment system
Allow deletion of own comments

Make comments in reply to others continue to
display original text
of other comment after
other comment has changed

--- a/static/tougcomsys/tougcomsys.css
+++ b/static/tougcomsys/tougcomsys.css
@@ -124,6 +124,10 @@ div.commenttext {
     margin-left:1em;
 }
 
+div.commentheader {
+    margin-top:1ex;
+}
+
 div.commentinreplyto {
     margin-top:1ex;
     margin-left:3em;
