--- a/templates/tougcomsys/firsthome/comment_form.html
+++ b/templates/tougcomsys/firsthome/comment_form.html
@@ -16,6 +16,7 @@
                 {{ form.comment_text.label }}:<br/>{{ form.comment_text }}
                 <p><button type="submit">Submit</button></p>    
             </form>
+            <div class="note">If you delete or edit your comment, replies that were made before the change will still show the original text</div>
         </div>
     </div>
 {% endblock %}
