--- a/templates/tougcomsys/firsthome/_base.html
+++ b/templates/tougcomsys/firsthome/_base.html
@@ -54,6 +54,15 @@
                 {% endif %}
             </a>
         </div>
+
+        {% if messages %}
+            <div id="messages">
+                {% for message in messages %}
+                    {{ message }}
+                {% endfor %}
+            </div>
+        {% endif %}
+
         {% if menus.0 %}
             <div id="menubar">
                 {% for item in menus.0 %}
