--- a/templates/tougcomsys/firsthome/article_form.html
+++ b/templates/tougcomsys/firsthome/article_form.html
@@ -78,7 +78,7 @@
             {% include 'touglates/form_field.html' with field=form.slug label_tag=formslug.label_tag %}
     </div>        
 
-        {% include 'touglates/form_field.html' with label="Submit Form" field='<button type="submit">Submit</button>' %}
+        {% include 'touglates/form_field.html' with label="Submit Form" field='<button type="submit">Save and Continue</button>' %}
     </form>
     </div>
     <script>
