--- a/templates/tougcomsys/firsthome/_base.html
+++ b/templates/tougcomsys/firsthome/_base.html
@@ -38,7 +38,7 @@
         {% for head_line in tougcomsys.head_lines_replaceable %}
             {{ head_line|safe }}
         {% endfor %}
-
+        <script src="{% static 'touglates/touglates.js' %}"></script>
     </head>
     <body>
 
