--- a/templates/tougcomsys/firsthome/article_form.html
+++ b/templates/tougcomsys/firsthome/article_form.html
@@ -4,6 +4,7 @@
 {% block content %}
     <script src='{% static 'touglates\touglates.js' %}'></script>
     <div class="form">
+        {% if form.errors %}{{ form.errors }}{% endif %}
         <form id="frm_article" method="POST">
         {{ form.media }}
         {% csrf_token %}
